feat: Ajustes nos getters e setters.